--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,6 @@
   align-content: center;
   align-self: center;
   text-align: center;
-
 }
 
 .blinds {
@@ -18,9 +17,11 @@
 }
 
 .blindsButton {
-  width: 60px;
+  width: 80px;
+  height: 80px;
 }
 
 .lightsButton {
   width: 140px;
+  height: 80px;
 }
