--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,33 @@
-<h3 class="heading">Blinds</h3>
-<div class="blinds">
-  <button mat-raised-button class="blindsButton" (click)="getPosts(14,'Up')"><mat-icon>keyboard_arrow_up</mat-icon></button> - 
-  <button mat-raised-button class="blindsButton" (click)="getPosts(10,'Up')"><mat-icon>keyboard_arrow_up</mat-icon></button>
-  <button mat-raised-button class="blindsButton" (click)="getPosts(12,'Up')"><mat-icon>keyboard_arrow_up</mat-icon></button>
-  <button mat-raised-button class="blindsButton" (click)="getPosts(13,'Up')"><mat-icon>keyboard_arrow_up</mat-icon></button>
+<div class="flex-containerWindow" fxLayout.xs="column" fxLayout.lt-sm="column" fxLayout.lt-md="row" fxLayoutAlign="space-around center" fxLayoutGap="5px">
+  <div class="flex-container-blinds">
+    <h3 class="heading">Blinds</h3>
+    <div>
+      <button mat-raised-button class="AllBlindsButton" (click)="getPosts(14,'Up')"><mat-icon>arrow_upward</mat-icon></button>
+      <button mat-raised-button class="blindsButton" (click)="getPosts(10,'Up')"><mat-icon>keyboard_arrow_up</mat-icon></button>
+      <button mat-raised-button class="blindsButton" (click)="getPosts(12,'Up')"><mat-icon>keyboard_arrow_up</mat-icon></button>
+      <button mat-raised-button class="blindsButton" (click)="getPosts(13,'Up')"><mat-icon>keyboard_arrow_up</mat-icon></button>
+    </div>
+    <div>
+      <button mat-raised-button class="AllBlindsButton" (click)="getPosts(14,'Stop')"><mat-icon>stop</mat-icon></button>
+      <button mat-raised-button class="blindsButton" (click)="getPosts(10,'Stop')"><mat-icon>stop</mat-icon></button>
+      <button mat-raised-button class="blindsButton" (click)="getPosts(12,'Stop')"><mat-icon>stop</mat-icon></button>
+      <button mat-raised-button class="blindsButton" (click)="getPosts(13,'Stop')"><mat-icon>stop</mat-icon></button>
+    </div>
+    <div>
+      <button mat-raised-button class="AllBlindsButton" (click)="getPosts(14,'Down')"><mat-icon>arrow_downward</mat-icon></button>
+      <button mat-raised-button class="blindsButton" (click)="getPosts(10,'Down')"><mat-icon>keyboard_arrow_down</mat-icon></button>
+      <button mat-raised-button class="blindsButton" (click)="getPosts(12,'Down')"><mat-icon>keyboard_arrow_down</mat-icon></button>
+      <button mat-raised-button class="blindsButton" (click)="getPosts(13,'Down')"><mat-icon>keyboard_arrow_down</mat-icon></button>
+    </div>
+  </div>
+  <div class="flex-container-lights">
+    <h3 class="heading">Lights</h3>
+    <div class="lights-row">
+      <button mat-raised-button class="lightsButton" (click)="getPosts(6,'On')">Spotlight On</button>
+      <button mat-raised-button class="lightsButton" (click)="getPosts(6,'Off')">Spotlight Off</button>
+    </div>
+    <div>
+      <button mat-raised-button class="lightsButton" (click)="getPosts(7,'On')">Sideboard On</button>
+      <button mat-raised-button class="lightsButton" (click)="getPosts(7,'Off')">Sideboard Off</button></div>
+  </div>
 </div>
-<div class="blinds">
-  <button mat-raised-button class="blindsButton" (click)="getPosts(14,'Stop')"><mat-icon>stop</mat-icon></button> - 
-  <button mat-raised-button class="blindsButton" (click)="getPosts(10,'Stop')"><mat-icon>stop</mat-icon></button>
-  <button mat-raised-button class="blindsButton" (click)="getPosts(12,'Stop')"><mat-icon>stop</mat-icon></button>
-  <button mat-raised-button class="blindsButton" (click)="getPosts(13,'Stop')"><mat-icon>stop</mat-icon></button>
-</div>
-<div class="blinds">
-  <button mat-raised-button class="blindsButton" (click)="getPosts(14,'Down')"><mat-icon>keyboard_arrow_down</mat-icon></button> - 
-  <button mat-raised-button class="blindsButton" (click)="getPosts(10,'Down')"><mat-icon>keyboard_arrow_down</mat-icon></button>
-  <button mat-raised-button class="blindsButton" (click)="getPosts(12,'Down')"><mat-icon>keyboard_arrow_down</mat-icon></button>
-  <button mat-raised-button class="blindsButton" (click)="getPosts(13,'Down')"><mat-icon>keyboard_arrow_down</mat-icon></button>
-</div>
-<h3 class="heading">Lights</h3>
-<div class="lights"><button mat-raised-button class="lightsButton" (click)="getPosts(6,'On')">Spotlight On</button><button mat-raised-button class="lightsButton" (click)="getPosts(6,'Off')">Spotlight Off</button></div>
-<br>
-<div class="lights"><button mat-raised-button class="lightsButton" (click)="getPosts(7,'On')">Dresser Light On</button><button mat-raised-button class="lightsButton" (click)="getPosts(7,'Off')">Dresser Light Off</button></div>
