--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 
-html, body { height: 100%; }
+
+html, body { height: 100%; background: #304C61; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
