--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,9 +19,17 @@
 .blindsButton {
   width: 80px;
   height: 80px;
+  margin-top:5px;
+  margin-bottom:5px;
+  margin-left:5px;
+  margin-right:5px;
 }
 
 .lightsButton {
   width: 140px;
   height: 80px;
+  margin-top:0px;
+  margin-bottom:20px;
+  margin-left:5px;
+  margin-right:5px;
 }
