Move to Hubitat Sideboard control

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
       <button mat-raised-button class="lightsButton" (click)="getPosts(6,'Off')">Spotlight Off</button>
     </div>
     <div>
-      <button mat-raised-button class="lightsButton" (click)="getPosts(7,'On')">Sideboard On</button>
-      <button mat-raised-button class="lightsButton" (click)="getPosts(7,'Off')">Sideboard Off</button></div>
+      <button mat-raised-button class="lightsButton" (click)="controlHubitatSwitch(289,'on')">Sideboard On</button>
+      <button mat-raised-button class="lightsButton" (click)="controlHubitatSwitch(289,'off')">Sideboard Off</button></div>
   </div>
 </div>
